[package]
name = "x86_vlapic"
version = "0.1.0"
edition = "2024"
description = "x86 Virtual Local APIC"
authors = ["Keyang Hu <keyang.hu@qq.com>", "Mingxian Su <aarkegz@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0" # MulanPubL2 is not included in SPDX
categories = ["virtualization"]
repository = "https://github.com/arceos-hypervisor/x86_vlapic"
keywords = ["x86", "hypervisor", "arceos"]

[dependencies]
log = "0.4.19"
paste = "1.0.15"
tock-registers = "0.10.0"
bit = "0.1.1"

memory_addr = "0.4"
axerrno = "0.2"

axaddrspace = "0.2.0"
axdevice_base = "0.1.0"
axvisor_api = "0.2.0"

[patch.crates-io]
axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api", branch = "aar-master" }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace", branch = "aar-master" }
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates", branch = "aar-master"}
